fix sticky header link spacing

--- a/css/main.css
+++ b/css/main.css
@@ -4330,7 +4330,7 @@ h2.features__title {
     .header__link {
       height: 32px;
       line-height: 32px;
-      min-width: 120px; } }
+      min-width: 80px; } }
   @media (max-width: 767px) {
     .header__link {
       min-width: 60px;
